--- a/index.html
+++ b/index.html
@@ -3,35 +3,33 @@
     <head>
         <meta charset="UTF-8"> <title>Jasmine Brown - Portfolio</title>
         <link rel="stylesheet" href="css/main.css" type="text/css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css2?family=Arimo&display=swap" rel="stylesheet">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="https://kit.fontawesome.com/94e3ce4c95.js" crossorigin="anonymous"></script>
-        <!-- <script src="js/menu.js"></script> -->
+        <script src="js/scroll.js"></script>
     </head>
     <body>
+    	<div id="menu-sensor">
+    	</div>
     	<div id="menu">
 			<div>
-				<a class="menu-button" href="#about">
+				<button onclick="jumpToSection('about')">
 					<h6 class="menu-text">about</h6>
-				</a>
+				</button>
 			</div>
 			<div>
-				<a class="menu-button" href="#projects">
+				<button onclick="jumpToSection('projects')">
 					<h6 class="menu-text">projects</h6>
-				</a>
+				</button>
 			</div>
 			<div>
-				<a class="menu-button" href="#cv">
+				<button onclick="jumpToSection('cv')">
 					<h6 class="menu-text">cv</h6>
-				</a>
+				</button>
 			</div>
 			<div>
-				<a class="menu-button" href="#contact">
+				<button onclick="jumpToSection('contact')">
 					<h6 class="menu-text">contact</h6>
-				</a>
+				</button>
 			</div>
 		</div>
 		<div class="section" id="main">
@@ -52,19 +50,19 @@
 	    				<i class="fab fa-github"></i>
 	    			</div>
 	    		</a>
-    			<a href="https://www.linkedin.com/in/jasminebrown2308/">
+    			<a href="https://linkedin.com/in/jasminebrown2308/">
 					<div class="icon">
 						<i class="fab fa-linkedin"></i>
 					</div>
 	    		</a>
     		</div>
-    		<a id="scroll-down" href="#about">
+    		<button id="scroll-down" onclick="jumpToSection('about')">
 	    		<div>
 	    			<i id="chevron-3" class="fas fa-chevron-down"></i>
 	    			<i id="chevron-2" class="fas fa-chevron-down"></i>
 	    			<i id="chevron-1" class="fas fa-chevron-down"></i>
 	    		</div>
-	    	</a>
+	    	</button>
     	</div>
     	<br>
     	<div id="about" class="section">
@@ -81,6 +79,46 @@
     	<br>
     	<div id="contact" class="section">
     		<h2>Get in touch</h2>
+    		<form id="contact-form">
+    			<div class="row">
+    				<label for="name-input">Name</label>
+	    			<input type="text" name="name" id="name-input">
+	    		</div>
+	    		<br>
+	    		<div class="row">
+	    			<label for="email-input">Email</label>
+	    			<input type="email" name="email" id="email-input">
+	    		</div>
+	    		<br>
+    			<textarea name="message" id="message-input" rows="5" placeholder="Enter your message here..."></textarea>
+    			<div class="center">
+		    		<input type="submit" value="Send message">
+		    	</div>
+    		</form>
+    		<div id="icon-container">
+	    		<div id="icons">
+	    			<a href="mailto:jasminebrown2308@gmail.com">
+		    			<div class="icon">
+		    				<i class="far fa-envelope"></i>
+		    			</div>
+		    		</a>
+		    		<a href="tel:+447741207083">
+		    			<div class="icon">
+		    				<i class="fas fa-phone"></i>
+		    			</div>
+		    		</a>
+		    		<a href="https://github.com/jasminebrown2308">
+		    			<div class="icon">
+		    				<i class="fab fa-github"></i>
+		    			</div>
+		    		</a>
+	    			<a href="https://linkedin.com/in/jasminebrown2308/">
+						<div class="icon">
+							<i class="fab fa-linkedin"></i>
+						</div>
+		    		</a>
+	    		</div>
+	    	</div>
     	</div>
     </body>
 </html>
