--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <script src="js/scroll.js"></script>
     </head>
     <body>
-    	<div id="menu-sensor">
-    	</div>
+    	<!-- MENU -->
+    	<div id="menu-sensor"></div>
     	<div id="menu">
 			<div>
 				<button onclick="jumpToSection('about')">
@@ -32,6 +32,8 @@
 				</button>
 			</div>
 		</div>
+
+		<!-- MAIN SECTION -->
 		<div class="section" id="main">
     		<h1>Jasmine Brown</h1>
     		<div id="icons">
@@ -65,18 +67,62 @@
 	    	</button>
     	</div>
     	<br>
+
+    	<!-- ABOUT SECTION -->
     	<div id="about" class="section">
     		<h2>About me</h2>
     	</div>
     	<br>
+
+    	<!-- PROJECTS SECTION -->
     	<div id="projects" class="section">
     		<h2>Projects</h2>
     	</div>
     	<br>
+
+    	<!-- CV SECTION -->
     	<div id="cv" class="section">
     		<h2>CV</h2>
+			<button class="icon" id="cv-download-btn">
+    			<i class="fas fa-file-download"></i>
+    			<h3>Download as PDF</h3>
+    		</button>
+	    	<div id="years">
+				<div class="year" id="year2021">
+					<h3>2021</h3>
+				</div>
+				<div class="year" id="year2020">
+					<h3>2020</h3>
+				</div>
+				<div class="year" id="year2019">
+					<h3>2019</h3>
+				</div>
+				<div class="year" id="year2018">
+					<h3>2018</h3>
+				</div>
+				<div class="year" id="year2017">
+					<h3>2017</h3>
+				</div>
+				<div class="year" id="year2016">
+					<h3>2016</h3>
+				</div>
+				<div class="year" id="year2015">
+					<h3>2015</h3>
+				</div>
+				<div class="year" id="year2013">
+					<h3>2013</h3>
+				</div>
+				<div class="year" id="year2011">
+					<h3>2011</h3>
+				</div>
+				<div class="year" id="year2009">
+					<h3>2009</h3>
+				</div>
+	    	</div>
     	</div>
     	<br>
+
+    	<!-- CONTACT SECTION -->
     	<div id="contact" class="section">
     		<h2>Get in touch</h2>
     		<form id="contact-form">
