--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="https://kit.fontawesome.com/94e3ce4c95.js" crossorigin="anonymous"></script>
         <script src="js/scroll.js"></script>
+        <script src="js/timeline.js"></script>
     </head>
     <body>
     	<!-- MENU -->
@@ -85,7 +86,7 @@
     		<h2>CV</h2>
 			<button class="icon" id="cv-download-btn">
     			<i class="fas fa-file-download"></i>
-    			<h3>Download as PDF</h3>
+    			<h3>View as PDF</h3>
     		</button>
 	    	<div id="years">
 				<div class="year" id="year2021">
