--- a/index.html
+++ b/index.html
@@ -85,28 +85,42 @@
     	<!-- CV SECTION -->
     	<div id="cv" class="section">
     		<h2>CV</h2>
-			<button class="icon" id="cv-download-btn">
-    			<i class="fas fa-file-download"></i>
-    			<h3>View as PDF</h3>
-    		</button>
-    		<div id="categories">
-    			<div id="category-container">
-    				<input type="checkbox" id="education-checkbox" checked>
-	    			<label for="education-checkbox">Education</label>
+    		<div id="cv-options">
+				<button class="icon" id="cv-download-btn">
+	    			<i class="fas fa-file-download"></i>
+	    			<h3>Download as PDF</h3>
+	    		</button>
+	    		<div id="categories">
+	    			<div id="category-container">
+		    			<label class="category-label">Education
+		    				<input type="checkbox" id="education-checkbox" onclick="categorySelect(this)" checked>
+		    				<span class="checkmark"></span>
+		    			</label>
+		    		</div>
+		    		<div id="category-container">
+		    			<label for="workexp-checkbox" class="category-label">Work experience
+		    				<input type="checkbox" id="workexp-checkbox" onclick="categorySelect(this)" checked>
+		    				<span class="checkmark"></span>
+		    			</label>
+		    		</div>
+		    		<div id="category-container">
+		    			<label for="jobs-checkbox" class="category-label">Employment
+		    				<input type="checkbox" id="jobs-checkbox" onclick="categorySelect(this)" checked>
+		    				<span class="checkmark"></span>
+		    			</label>
+		    		</div>
+		    		<div id="category-container">
+		    			<label for="extra-checkbox" class="category-label">Extra-curricular
+		    				<input type="checkbox" id="extra-checkbox" onclick="categorySelect(this)" checked>
+		    				<span class="checkmark"></span>
+		    			</label>
+		    		</div>
 	    		</div>
-	    		<div id="category-container">
-	    			<input type="checkbox" id="work-checkbox" checked>
-	    			<label for="work-checkbox">Work</label>
-	    		</div>
-	    		<div id="category-container">
-	    			<input type="checkbox" id="technical-checkbox" checked>
-	    			<label for="tech-checkbox">Tech stuff</label>
-	    		</div>
-	    		<div id="category-container">
-	    			<input type="checkbox" id="extra-checkbox" checked>
-	    			<label for="extra-checkbox">Extra-curricular</label>
-	    		</div>
-    		</div>
+	    		<button id="expand-btn" onclick="toggleExpand()">
+	    			<i id="expand-arrow" class="fas fa-chevron-down"></i>
+	    			<h3 id="expand-txt">Expand all</h3>
+	    		</button>
+	    	</div>
 	    	<div id="years"></div>
     	</div>
     	<br>
