finish carousel (expand not yet implemented)

--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@
     	<!-- ABOUT SECTION -->
     	<div id="about" class="section">
     		<h2>About me</h2>
+    		<div class="about-container">
+    			<div class="bio">
+    			</div>
+    			<div class="skills">
+    			</div>
+    		</div>
     	</div>
     	<br>
 
@@ -94,7 +100,7 @@
 	    		</div>
     		</button>
     		<div id="projects-container">
-    			<div class="project" id="proj-prev" onclick="prevProject()">
+    			<!-- <div class="project" id="proj-prev" onclick="prevProject()">
     				<img id="proj-prev-img" />
     			</div>
     			<div class="project" id="proj-main">
@@ -104,7 +110,7 @@
     			</div>
     			<div class="project" id="proj-next" onclick="nextProject()">
     				<img id="proj-next-img" />
-    			</div>
+    			</div> -->
     		</div>
 			<button id="scroll-next" onclick="nextProject()">
 	    		<div>
