--- a/index.html
+++ b/index.html
@@ -1,106 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8"> <title>Jasmine Brown - Portfolio</title>
-        <link rel="stylesheet" href="css/core.css" type="text/css">
-        <link rel="stylesheet" href="css/main.css" type="text/css">
-        <link rel="stylesheet" href="css/projects.css" type="text/css">
-        <link rel="stylesheet" href="css/cv.css" type="text/css">
-        <link rel="stylesheet" href="css/contact.css" type="text/css">
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <script src="https://kit.fontawesome.com/94e3ce4c95.js" crossorigin="anonymous"></script>
-        <script src="js/typing.js"></script>
-        <script src="js/scroll.js"></script>
-        <script src="js/timeline.js"></script>
-        <script src="js/projects.js"></script>
-        <script defer src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"></script>
-    </head>
-    <body>
-    	<!-- MENU -->
-    	<div id="menu-sensor"></div>
-    	<div id="menu">
-			<div>
-				<button onclick="jumpToSection('about')">
-					<h6 class="menu-text">about</h6>
-				</button>
-			</div>
-			<div>
-				<button onclick="jumpToSection('projects')">
-					<h6 class="menu-text">projects</h6>
-				</button>
-			</div>
-			<div>
-				<button onclick="jumpToSection('cv')">
-					<h6 class="menu-text">cv</h6>
-				</button>
-			</div>
-			<div>
-				<button onclick="jumpToSection('contact')">
-					<h6 class="menu-text">contact</h6>
-				</button>
-			</div>
-		</div>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Jasmine Brown - Portfolio</title>
+    <link rel="stylesheet" href="css/core.css" type="text/css" />
+    <link rel="stylesheet" href="css/main.css" type="text/css" />
+    <link rel="stylesheet" href="css/projects.css" type="text/css" />
+    <link rel="stylesheet" href="css/cv.css" type="text/css" />
+    <link rel="stylesheet" href="css/contact.css" type="text/css" />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script
+      src="https://kit.fontawesome.com/94e3ce4c95.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="js/typing.js"></script>
+    <script src="js/scroll.js"></script>
+    <script src="js/timeline.js"></script>
+    <script src="js/projects.js"></script>
+    <script
+      defer
+      src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"
+    ></script>
+  </head>
+  <body>
+    <!-- MENU -->
+    <div id="menu-sensor"></div>
+    <div id="menu">
+      <div>
+        <button onclick="jumpToSection('about')">
+          <h6 class="menu-text">about</h6>
+        </button>
+      </div>
+      <div>
+        <button onclick="jumpToSection('projects')">
+          <h6 class="menu-text">projects</h6>
+        </button>
+      </div>
+      <div>
+        <button onclick="jumpToSection('cv')">
+          <h6 class="menu-text">cv</h6>
+        </button>
+      </div>
+      <div>
+        <button onclick="jumpToSection('contact')">
+          <h6 class="menu-text">contact</h6>
+        </button>
+      </div>
+    </div>
 
-		<!-- MAIN SECTION -->
-		<div class="section" id="main">
-    		<h1>Jasmine Brown</h1>
-    		<h1 id="subtitle">Software Engineer</h1>
-    		<div id="icons">
-    			<a href="mailto:jasminebrown2308@gmail.com">
-	    			<div class="icon">
-	    				<i class="far fa-envelope"></i>
-	    			</div>
-	    		</a>
-	    		<a href="tel:+447741207083">
-	    			<div class="icon">
-	    				<i class="fas fa-phone"></i>
-	    			</div>
-	    		</a>
-    			<a href="https://linkedin.com/in/jasminebrown2308/">
-					<div class="icon">
-						<i class="fab fa-linkedin"></i>
-					</div>
-	    		</a>
-	    		<a href="https://github.com/jasminebrown2308">
-	    			<div class="icon">
-	    				<i class="fab fa-github"></i>
-	    			</div>
-	    		</a>
-    		</div>
-    		<button id="scroll-down" onclick="jumpToSection('about')">
-	    		<div>
-	    			<i id="chevron-down-3" class="fas fa-chevron-down"></i>
-	    			<i id="chevron-down-2" class="fas fa-chevron-down"></i>
-	    			<i id="chevron-down-1" class="fas fa-chevron-down"></i>
-	    		</div>
-	    	</button>
-    	</div>
-    	<br>
+    <!-- MAIN SECTION -->
+    <div class="section" id="main">
+      <h1>Jasmine Brown</h1>
+      <h1 id="subtitle">Software Engineer</h1>
+      <div id="icons">
+        <a href="mailto:jasminebrown2308@gmail.com">
+          <div class="icon">
+            <i class="far fa-envelope"></i>
+          </div>
+        </a>
+        <a href="tel:+447741207083">
+          <div class="icon">
+            <i class="fas fa-phone"></i>
+          </div>
+        </a>
+        <a href="https://linkedin.com/in/jasminebrown2308/">
+          <div class="icon">
+            <i class="fab fa-linkedin"></i>
+          </div>
+        </a>
+        <a href="https://github.com/jasminebrown2308">
+          <div class="icon">
+            <i class="fab fa-github"></i>
+          </div>
+        </a>
+      </div>
+      <button id="scroll-down" onclick="jumpToSection('about')">
+        <div>
+          <i id="chevron-down-3" class="fas fa-chevron-down"></i>
+          <i id="chevron-down-2" class="fas fa-chevron-down"></i>
+          <i id="chevron-down-1" class="fas fa-chevron-down"></i>
+        </div>
+      </button>
+    </div>
+    <br />
 
-    	<!-- ABOUT SECTION -->
-    	<div id="about" class="section">
-    		<h2>About me</h2>
-    		<div class="about-container">
-    			<div class="bio">
-    			</div>
-    			<div class="skills">
-    			</div>
-    		</div>
-    	</div>
-    	<br>
+    <!-- ABOUT SECTION -->
+    <div id="about" class="section">
+      <h2>About me</h2>
+      <div class="about-container">
+        <div class="bio"></div>
+        <div class="skills"></div>
+      </div>
+    </div>
+    <br />
 
-    	<!-- PROJECTS SECTION -->
-    	<div id="projects" class="section">
-    		<h2>Projects</h2>
-			<button id="scroll-prev" onclick="prevProject()">
-	    		<div>
-	    			<i id="chevron-left-3" class="fas fa-chevron-left"></i>
-	    			<i id="chevron-left-2" class="fas fa-chevron-left"></i>
-	    			<i id="chevron-left-1" class="fas fa-chevron-left"></i>
-	    		</div>
-    		</button>
-    		<div id="projects-container">
-    			<!-- <div class="project" id="proj-prev" onclick="prevProject()">
+    <!-- PROJECTS SECTION -->
+    <div id="projects" class="section">
+      <h2>Projects</h2>
+      <button id="scroll-prev" onclick="prevProject()">
+        <div>
+          <i id="chevron-left-3" class="fas fa-chevron-left"></i>
+          <i id="chevron-left-2" class="fas fa-chevron-left"></i>
+          <i id="chevron-left-1" class="fas fa-chevron-left"></i>
+        </div>
+      </button>
+      <div id="projects-container">
+        <!-- <div class="project" id="proj-prev" onclick="prevProject()">
     				<img id="proj-prev-img" />
     			</div>
     			<div class="project" id="proj-main">
@@ -111,105 +116,134 @@
     			<div class="project" id="proj-next" onclick="nextProject()">
     				<img id="proj-next-img" />
     			</div> -->
-    		</div>
-			<button id="scroll-next" onclick="nextProject()">
-	    		<div>
-	    			<i id="chevron-right-3" class="fas fa-chevron-right"></i>
-	    			<i id="chevron-right-2" class="fas fa-chevron-right"></i>
-	    			<i id="chevron-right-1" class="fas fa-chevron-right"></i>
-	    		</div>
-	    	</button>
-    	</div>
-    	<br>
+      </div>
+      <button id="scroll-next" onclick="nextProject()">
+        <div>
+          <i id="chevron-right-3" class="fas fa-chevron-right"></i>
+          <i id="chevron-right-2" class="fas fa-chevron-right"></i>
+          <i id="chevron-right-1" class="fas fa-chevron-right"></i>
+        </div>
+      </button>
+    </div>
+    <br />
 
-    	<!-- CV SECTION -->
-    	<div id="cv" class="section">
-    		<h2>CV</h2>
-    		<div id="cv-options">
-				<button class="icon" id="cv-download-btn">
-	    			<i class="fas fa-file-download"></i>
-	    			<h3>Download as PDF</h3>
-	    		</button>
-	    		<span id="options-container">
-		    		<div id="categories">
-		    			<div id="category-container">
-			    			<label class="category-label">Education
-			    				<input type="checkbox" id="education-checkbox" onclick="categorySelect(this)" checked>
-			    				<span class="checkmark"></span>
-			    			</label>
-			    		</div>
-			    		<div id="category-container">
-			    			<label for="workexp-checkbox" class="category-label">Work experience
-			    				<input type="checkbox" id="workexp-checkbox" onclick="categorySelect(this)" checked>
-			    				<span class="checkmark"></span>
-			    			</label>
-			    		</div>
-			    		<div id="category-container">
-			    			<label for="jobs-checkbox" class="category-label">Employment
-			    				<input type="checkbox" id="jobs-checkbox" onclick="categorySelect(this)" checked>
-			    				<span class="checkmark"></span>
-			    			</label>
-			    		</div>
-			    		<div id="category-container">
-			    			<label for="extra-checkbox" class="category-label">Extra-curricular
-			    				<input type="checkbox" id="extra-checkbox" onclick="categorySelect(this)" checked>
-			    				<span class="checkmark"></span>
-			    			</label>
-			    		</div>
-		    		</div>
-		    		<button id="expand-btn" onclick="toggleExpand()">
-		    			<i id="expand-arrow" class="fas fa-chevron-down"></i>
-		    			<h3 id="expand-txt">Expand all</h3>
-		    		</button>
-	    		</span>
-	    	</div>
-	    	<div id="years"></div>
-    	</div>
-    	<br>
+    <!-- CV SECTION -->
+    <div id="cv" class="section">
+      <h2>CV</h2>
+      <div id="cv-options">
+        <button class="icon" id="cv-download-btn">
+          <i class="fas fa-file-download"></i>
+          <h3>Download as PDF</h3>
+        </button>
+        <span id="options-container">
+          <div id="categories">
+            <div id="category-container">
+              <label class="category-label"
+                >Education
+                <input
+                  type="checkbox"
+                  id="education-checkbox"
+                  onclick="categorySelect(this)"
+                  checked
+                />
+                <span class="checkmark"></span>
+              </label>
+            </div>
+            <div id="category-container">
+              <label for="workexp-checkbox" class="category-label"
+                >Work experience
+                <input
+                  type="checkbox"
+                  id="workexp-checkbox"
+                  onclick="categorySelect(this)"
+                  checked
+                />
+                <span class="checkmark"></span>
+              </label>
+            </div>
+            <div id="category-container">
+              <label for="jobs-checkbox" class="category-label"
+                >Employment
+                <input
+                  type="checkbox"
+                  id="jobs-checkbox"
+                  onclick="categorySelect(this)"
+                  checked
+                />
+                <span class="checkmark"></span>
+              </label>
+            </div>
+            <div id="category-container">
+              <label for="extra-checkbox" class="category-label"
+                >Extra-curricular
+                <input
+                  type="checkbox"
+                  id="extra-checkbox"
+                  onclick="categorySelect(this)"
+                  checked
+                />
+                <span class="checkmark"></span>
+              </label>
+            </div>
+          </div>
+          <button id="expand-btn" onclick="toggleExpand()">
+            <i id="expand-arrow" class="fas fa-chevron-down"></i>
+            <h3 id="expand-txt">Expand all</h3>
+          </button>
+        </span>
+      </div>
+      <div id="years"></div>
+    </div>
+    <br />
 
-    	<!-- CONTACT SECTION -->
-    	<div id="contact" class="section">
-    		<h2>Get in touch</h2>
-    		<form id="contact-form">
-    			<div class="row">
-    				<label for="name-input">Name</label>
-	    			<input type="text" name="name" id="name-input">
-	    		</div>
-	    		<br>
-	    		<div class="row">
-	    			<label for="email-input">Email</label>
-	    			<input type="email" name="email" id="email-input">
-	    		</div>
-	    		<br>
-    			<textarea name="message" id="message-input" rows="5" placeholder="Enter your message here..."></textarea>
-    			<div class="center">
-		    		<input type="submit" value="Send message">
-		    	</div>
-    		</form>
-    		<div id="icon-container">
-	    		<div id="icons">
-	    			<a href="mailto:jasminebrown2308@gmail.com">
-		    			<div class="icon">
-		    				<i class="far fa-envelope"></i>
-		    			</div>
-		    		</a>
-		    		<a href="tel:+447741207083">
-		    			<div class="icon">
-		    				<i class="fas fa-phone"></i>
-		    			</div>
-		    		</a>
-		    		<a href="https://github.com/jasminebrown2308">
-		    			<div class="icon">
-		    				<i class="fab fa-github"></i>
-		    			</div>
-		    		</a>
-	    			<a href="https://linkedin.com/in/jasminebrown2308/">
-						<div class="icon">
-							<i class="fab fa-linkedin"></i>
-						</div>
-		    		</a>
-	    		</div>
-	    	</div>
-    	</div>
-    </body>
+    <!-- CONTACT SECTION -->
+    <div id="contact" class="section">
+      <h2>Get in touch</h2>
+      <form id="contact-form">
+        <div class="row">
+          <label for="name-input">Name</label>
+          <input type="text" name="name" id="name-input" />
+        </div>
+        <br />
+        <div class="row">
+          <label for="email-input">Email</label>
+          <input type="email" name="email" id="email-input" />
+        </div>
+        <br />
+        <textarea
+          name="message"
+          id="message-input"
+          rows="5"
+          placeholder="Enter your message here..."
+        ></textarea>
+        <div class="center">
+          <input type="submit" value="Send message" />
+        </div>
+      </form>
+      <div id="icon-container">
+        <div id="icons">
+          <a href="mailto:jasminebrown2308@gmail.com">
+            <div class="icon">
+              <i class="far fa-envelope"></i>
+            </div>
+          </a>
+          <a href="tel:+447741207083">
+            <div class="icon">
+              <i class="fas fa-phone"></i>
+            </div>
+          </a>
+          <a href="https://github.com/jasminebrown2308">
+            <div class="icon">
+              <i class="fab fa-github"></i>
+            </div>
+          </a>
+          <a href="https://linkedin.com/in/jasminebrown2308/">
+            <div class="icon">
+              <i class="fab fa-linkedin"></i>
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
