--- a/index.html
+++ b/index.html
@@ -2,6 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta
+      name="description"
+      content="Portfolio of software projects and experience."
+    />
+    <meta
+      name="keywords"
+      content="Portfolio, Jasmine Brown, Software, Engineer, Projects"
+    />
+    <meta name="author" content="Jasmine Brown" />
+    <meta property="og:title" content="Jasmine Brown - Portfolio" />
+    <meta
+      property="og:description"
+      content="Portfolio of software projects and experience."
+    />
     <title>Jasmine Brown - Portfolio</title>
     <link rel="stylesheet" href="css/core.css" type="text/css" />
     <link rel="stylesheet" href="css/main.css" type="text/css" />
@@ -10,13 +28,14 @@
     <link rel="stylesheet" href="css/contact.css" type="text/css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script
-      src="https://kit.fontawesome.com/94e3ce4c95.js"
+      src="https://kit.fontawesome.com/e75b868ca3.js"
       crossorigin="anonymous"
     ></script>
     <script src="js/typing.js"></script>
     <script src="js/scroll.js"></script>
     <script src="js/timeline.js"></script>
     <script src="js/projects.js"></script>
+    <script src="js/contact.js"></script>
     <script
       defer
       src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"
@@ -88,8 +107,43 @@
     <div id="about" class="section">
       <h2>About me</h2>
       <div class="about-container">
-        <div class="bio"></div>
-        <div class="skills"></div>
+        <div class="bio">
+          <p>
+            Hi, I'm Jasmine. I'm currently in my final year of studying Computer
+            Science at Warwick.
+            <br /><br />
+            I'm passionate about using technology in creative and innovative
+            ways, and applying it to solve real-world problems. In particular,
+            I'm interested in the applications of AI and machine learning.
+            <br /><br />
+            At the moment, I'm working on my third-year project: an AI Tap Dance
+            Choreography Generation System. This is a very exciting project as
+            it combines my interest in software engineering with another of my
+            main passions: tap dancing! I've also recently completed an
+            internship at Amazon (Prime Video) this summer, and am looking
+            forward to what will come next once I graduate in July 2023.
+            <br /><br />
+            On this website, you can find some of my
+            <a href="#projects">favourite projects</a> that I've worked on, plus
+            a timeline of my <a href="#cv">past experiences</a>.
+          </p>
+        </div>
+        <div class="skills">
+          <h3>Languages</h3>
+          <ul>
+            <li>Java</li>
+            <li>Python</li>
+            <li>C</li>
+            <li>PHP</li>
+            <li>SQL</li>
+            <li>HTML + CSS</li>
+            <li>JavaScript (incl. React + JQuery)</li>
+            <li>TypeScript</li>
+            <li>Swift</li>
+            <li>Kotlin</li>
+            <li>Linux</li>
+          </ul>
+        </div>
       </div>
     </div>
     <br />
@@ -104,19 +158,7 @@
           <i id="chevron-left-1" class="fas fa-chevron-left"></i>
         </div>
       </button>
-      <div id="projects-container">
-        <!-- <div class="project" id="proj-prev" onclick="prevProject()">
-    				<img id="proj-prev-img" />
-    			</div>
-    			<div class="project" id="proj-main">
-    				<img id="proj-main-img" />
-    				<h3 id="proj-main-title"></h3>
-    				<h4 id="proj-main-subtitle"></h4>
-    			</div>
-    			<div class="project" id="proj-next" onclick="nextProject()">
-    				<img id="proj-next-img" />
-    			</div> -->
-      </div>
+      <div id="projects-carousel-container"></div>
       <button id="scroll-next" onclick="nextProject()">
         <div>
           <i id="chevron-right-3" class="fas fa-chevron-right"></i>
@@ -124,6 +166,23 @@
           <i id="chevron-right-1" class="fas fa-chevron-right"></i>
         </div>
       </button>
+    </div>
+
+    <div id="projects-background">
+      <div id="projects-modal">
+        <h3 class="proj-title">Mentoring System</h3>
+        <h4 class="proj-subtitle">Web Application</h4>
+        <button class="modal-close" onclick="closeProject()">
+          <i class="fa-solid fa-circle-xmark"></i>
+        </button>
+        <div class="proj-info">
+          <img class="proj-img" />
+          <div class="proj-details">
+            <ul class="proj-tags"></ul>
+            <p class="proj-description"></p>
+          </div>
+        </div>
+      </div>
     </div>
     <br />
 
@@ -199,7 +258,7 @@
     <!-- CONTACT SECTION -->
     <div id="contact" class="section">
       <h2>Get in touch</h2>
-      <form id="contact-form">
+      <form id="contact-form" onsubmit="sendContactForm()">
         <div class="row">
           <label for="name-input">Name</label>
           <input type="text" name="name" id="name-input" />
