--- a/index.html
+++ b/index.html
@@ -20,12 +20,34 @@
       property="og:description"
       content="Portfolio of software projects and experience."
     />
+    <meta
+      property="og:image"
+      content="https://www.jasminebrown.me/images/personal-portfolio/1-homepage.png"
+    />
     <title>Jasmine Brown - Portfolio</title>
     <link rel="stylesheet" href="css/core.css" type="text/css" />
     <link rel="stylesheet" href="css/main.css" type="text/css" />
     <link rel="stylesheet" href="css/projects.css" type="text/css" />
     <link rel="stylesheet" href="css/cv.css" type="text/css" />
     <link rel="stylesheet" href="css/contact.css" type="text/css" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./favicon/site.webmanifest" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script
       src="https://kit.fontawesome.com/e75b868ca3.js"
