--- a/index.html
+++ b/index.html
@@ -212,10 +212,16 @@
     <div id="cv" class="section">
       <h2>CV</h2>
       <div id="cv-options">
-        <button class="icon" id="cv-download-btn">
+        <a
+          class="icon"
+          id="cv-download-btn"
+          href="./CV.pdf"
+          download="Jasmine Brown CV"
+          target="_blank"
+        >
           <i class="fas fa-file-download"></i>
           <h3>Download as PDF</h3>
-        </button>
+        </a>
         <span id="options-container">
           <div id="categories">
             <div id="category-container">
