added palantir into bio

--- a/index.html
+++ b/index.html
@@ -142,8 +142,9 @@
             Choreography Generation System. This is a very exciting project as
             it combines my interest in software engineering with another of my
             main passions: tap dancing! I've also recently completed an
-            internship at Amazon (Prime Video) this summer, and am looking
-            forward to what will come next once I graduate in July 2023.
+            internship at Amazon (Prime Video) this summer, and am super excited
+            to be joining the team at Palantir as a Forward-Deployed Software
+            Engineer once I graduate next year.
             <br /><br />
             On this website, you can find some of my
             <a href="#projects">favourite projects</a> that I've worked on, plus
